add changelog entry

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,5 +1,8 @@
-debhelper (7.2.0) UNRELEASED; urgency=low
+debhelper (7.0.50) UNRELEASED; urgency=low
 
+  * This release is designed to be easily backportable to stable,
+    to support the new style of rules file that I expect many packages will
+    use.
   * dh: debian/rules override targets can change what is run
     for a specific debhelper command in a sequence.
     (Thanks Modestas Vainius for the improved makefile parser.)
