--- a/debian/changelog
+++ b/debian/changelog
@@ -1,4 +1,4 @@
-debhelper (7.0.50) UNRELEASED; urgency=low
+debhelper (7.0.50) unstable; urgency=low
 
   * This release is designed to be easily backportable to stable,
     to support the new style of rules file that I expect many packages will
@@ -9,13 +9,13 @@ debhelper (7.0.50) UNRELEASED; urgency=low
   * dh: Redid all the examples to use override targets, since these
     eliminate all annoying boilerplate and are much easier to understand
     than the old method.
-  * Remove rules.simple example, there's no need to use explcit targets
+  * Remove rules.simple example, there's little need to use explicit targets
     with dh anymore.
   * dh: Support debian/rules calling make with -B,
     which is useful to avoid issues with phony implicit
     rules (see bug #509756).
 
- -- Joey Hess <joeyh@debian.org>  Thu, 25 Dec 2008 16:26:36 -0500
+ -- Joey Hess <joeyh@debian.org>  Fri, 27 Feb 2009 15:25:52 -0500
 
 debhelper (7.0.17) unstable; urgency=low
 
