--- a/debian/changelog
+++ b/debian/changelog
@@ -1,5 +1,6 @@
-debhelper (7.2.0) UNRELEASED; urgency=low
+debhelper (7.2.0) experimental; urgency=low
 
+  * Merged debhelper 7.0.50.
   * dh: Fix typo. Closes: #509754
   * debhelper.pod: Fix typo. Closes: #510180
   * dh_gconf: Support mandatory settings. Closes: #513923
