--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+debhelper (7.0.51) UNRELEASED; urgency=low
+
+  * dh: Man page typo. Closes: #517549
+
+ -- Joey Hess <joeyh@debian.org>  Sat, 28 Feb 2009 13:21:33 -0500
+
 debhelper (7.0.50) unstable; urgency=low
 
   * This release is designed to be easily backportable to stable,
