dh: Man page typo. Closes: #517549, #517550

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,6 +1,6 @@
 debhelper (7.0.51) UNRELEASED; urgency=low
 
-  * dh: Man page typo. Closes: #517549
+  * dh: Man page typo. Closes: #517549, #517550
 
  -- Joey Hess <joeyh@debian.org>  Sat, 28 Feb 2009 13:21:33 -0500
 
