--- a/debian/changelog
+++ b/debian/changelog
@@ -1,8 +1,8 @@
-debhelper (7.0.51) UNRELEASED; urgency=low
+debhelper (7.0.51) unstable; urgency=low
 
-  * dh: Man page typo. Closes: #517549, #517550
+  * dh: Man page typos. Closes: #517549, #517550
 
- -- Joey Hess <joeyh@debian.org>  Sat, 28 Feb 2009 13:21:33 -0500
+ -- Joey Hess <joeyh@debian.org>  Sat, 28 Feb 2009 13:23:30 -0500
 
 debhelper (7.0.50) unstable; urgency=low
 
