dh: Fix make parsing to not be broken by locale settings. Closes: #517617

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+debhelper (7.0.52) UNRELEASED; urgency=low
+
+  * dh: Fix make parsing to not be broken by locale settings.
+    Closes: #517617
+
+ -- Joey Hess <joeyh@debian.org>  Sat, 28 Feb 2009 19:52:06 -0500
+
 debhelper (7.0.51) unstable; urgency=low
 
   * dh: Man page typos. Closes: #517549, #517550
