--- a/debian/changelog
+++ b/debian/changelog
@@ -1,9 +1,9 @@
-debhelper (7.0.52) UNRELEASED; urgency=low
+debhelper (7.0.52) unstable; urgency=low
 
   * dh: Fix make parsing to not be broken by locale settings.
     Closes: #517617
 
- -- Joey Hess <joeyh@debian.org>  Sat, 28 Feb 2009 19:52:06 -0500
+ -- Joey Hess <joeyh@debian.org>  Sat, 28 Feb 2009 19:52:34 -0500
 
 debhelper (7.0.51) unstable; urgency=low
 
