--- a/debian/changelog
+++ b/debian/changelog
@@ -1,4 +1,4 @@
-debhelper (7.2.2) UNRELEASED; urgency=low
+debhelper (7.2.2) unstable; urgency=low
 
   * dh_installmodules: Give files in /etc/modprobe.d a .conf
     syntax, as required by new module-init-tools.
@@ -9,7 +9,7 @@ debhelper (7.2.2) UNRELEASED; urgency=low
       conffile's name.
     - Support case where dpkg-query says the file is obsolete.
 
- -- Joey Hess <joeyh@debian.org>  Mon, 02 Mar 2009 20:46:10 -0500
+ -- Joey Hess <joeyh@debian.org>  Wed, 04 Mar 2009 19:37:33 -0500
 
 debhelper (7.2.1) experimental; urgency=low
 
