dh_installmenus: Now that a triggers capable menu and dpkg are in stable, menu does not need to be explicitly run in maintainer scripts, except for packages with menu-methods files. (See #473467)

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,11 @@
+debhelper (7.2.3) UNRELEASED; urgency=low
+
+  * dh_installmenus: Now that a triggers capable menu and dpkg are in
+    stable, menu does not need to be explicitly run in maintainer
+    scripts, except for packages with menu-methods files. (See #473467)
+
+ -- Joey Hess <joeyh@debian.org>  Fri, 06 Mar 2009 13:57:47 -0500
+
 debhelper (7.2.2) unstable; urgency=low
 
   * dh_installmodules: Give files in /etc/modprobe.d a .conf
