dh_installdocs: No longer add maintainer script code to call doc-base, as it supports triggers in stable.

--- a/debian/changelog
+++ b/debian/changelog
@@ -3,6 +3,8 @@ debhelper (7.2.3) UNRELEASED; urgency=low
   * dh_installmenus: Now that a triggers capable menu and dpkg are in
     stable, menu does not need to be explicitly run in maintainer
     scripts, except for packages with menu-methods files. (See #473467)
+  * dh_installdocs: No longer add maintainer script code to call
+    doc-base, as it supports triggers in stable.
 
  -- Joey Hess <joeyh@debian.org>  Fri, 06 Mar 2009 13:57:47 -0500
 
