dh: Override LC_ALL, not LANG. Closes: #517617

--- a/debian/changelog
+++ b/debian/changelog
@@ -5,6 +5,7 @@ debhelper (7.2.3) UNRELEASED; urgency=low
     scripts, except for packages with menu-methods files. (See #473467)
   * dh_installdocs: No longer add maintainer script code to call
     doc-base, as it supports triggers in stable.
+  * dh: Override LC_ALL, not LANG. Closes: #517617
 
  -- Joey Hess <joeyh@debian.org>  Fri, 06 Mar 2009 13:57:47 -0500
 
