dh_installchangelogs: Support -X to exclude automatic installation of specific upstream changelogs. Closes: #490937

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,4 +1,4 @@
-debhelper (7.2.3) UNRELEASED; urgency=low
+debhelper (7.2.3-1) UNRELEASED; urgency=low
 
   * dh_installmenus: Now that a triggers capable menu and dpkg are in
     stable, menu does not need to be explicitly run in maintainer
@@ -6,6 +6,8 @@ debhelper (7.2.3) UNRELEASED; urgency=low
   * dh_installdocs: No longer add maintainer script code to call
     doc-base, as it supports triggers in stable.
   * dh: Override LC_ALL, not LANG. Closes: #517617
+  * dh_installchangelogs: Support -X to exclude automatic installation
+    of specific upstream changelogs. Closes: #490937
 
  -- Joey Hess <joeyh@debian.org>  Fri, 06 Mar 2009 13:57:47 -0500
 
