--- a/debian/changelog
+++ b/debian/changelog
@@ -8,6 +8,8 @@ debhelper (7.2.3-1) UNRELEASED; urgency=low
   * dh: Override LC_ALL, not LANG. Closes: #517617
   * dh_installchangelogs: Support -X to exclude automatic installation
     of specific upstream changelogs. Closes: #490937
+  * dh_bugfiles: New program, contributed by Modestas Vainius.
+    Closes: #326874
 
  -- Joey Hess <joeyh@debian.org>  Fri, 06 Mar 2009 13:57:47 -0500
 
