Compatability level 4 is now deprecated.

--- a/debhelper.pod
+++ b/debhelper.pod
@@ -333,6 +333,8 @@ dh_link will correct existing links to conform with policy.
 
 =back
 
+This mode is deprecated.
+
 =item V5
 
 Changes from V4 are:
