--- a/doc/TODO
+++ b/doc/TODO
@@ -12,7 +12,7 @@ v8:
 
 Deprecated:
 
-* DH_COMPAT 1, 2, 3. Can be removed once all packages are seen to be using
+* DH_COMPAT 1, 2, 3, 4. Can be removed once all packages are seen to be using
   a newer version. I won't hold my breath. Now with evil warning messages
   though.
 * Also, grep the entire archive for all dh_* command lines,
