--- a/debian/changelog
+++ b/debian/changelog
@@ -5,11 +5,12 @@ debhelper (7.2.3-1) UNRELEASED; urgency=low
     scripts, except for packages with menu-methods files. (See #473467)
   * dh_installdocs: No longer add maintainer script code to call
     doc-base, as it supports triggers in stable.
-  * dh: Override LC_ALL, not LANG. Closes: #517617
-  * dh_installchangelogs: Support -X to exclude automatic installation
-    of specific upstream changelogs. Closes: #490937
   * dh_bugfiles: New program, contributed by Modestas Vainius.
     Closes: #326874
+  * dh: Override LC_ALL, not LANG. re-Closes: #517617
+  * dh_installchangelogs: Support -X to exclude automatic installation
+    of specific upstream changelogs. re-Closes: #490937
+  * Compatability level 4 is now deprecated.
 
  -- Joey Hess <joeyh@debian.org>  Fri, 06 Mar 2009 13:57:47 -0500
 
