--- a/debian/changelog
+++ b/debian/changelog
@@ -1,4 +1,4 @@
-debhelper (7.2.3-1) UNRELEASED; urgency=low
+debhelper (7.2.3-1) unstable; urgency=low
 
   * dh_installmenus: Now that a triggers capable menu and dpkg are in
     stable, menu does not need to be explicitly run in maintainer
@@ -12,7 +12,7 @@ debhelper (7.2.3-1) UNRELEASED; urgency=low
     of specific upstream changelogs. re-Closes: #490937
   * Compatability level 4 is now deprecated.
 
- -- Joey Hess <joeyh@debian.org>  Fri, 06 Mar 2009 13:57:47 -0500
+ -- Joey Hess <joeyh@debian.org>  Sat, 07 Mar 2009 14:52:20 -0500
 
 debhelper (7.2.2) unstable; urgency=low
 
