dh_makeshlibs: Re-add --add-udeb support. Closes: #518655
* dh_makeshlibs: Re-add --add-udeb support. Closes: #518655
* dh_shlibdeps: Remove --add-udeb switch (was accidentially added here).

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,4 +1,4 @@
-debhelper (7.2.3-1) unstable; urgency=low
+debhelper (7.2.3) unstable; urgency=low
 
   * dh_installmenus: Now that a triggers capable menu and dpkg are in
     stable, menu does not need to be explicitly run in maintainer
@@ -11,6 +11,8 @@ debhelper (7.2.3-1) unstable; urgency=low
   * dh_installchangelogs: Support -X to exclude automatic installation
     of specific upstream changelogs. re-Closes: #490937
   * Compatability level 4 is now deprecated.
+  * dh_makeshlibs: Re-add --add-udeb support. Closes: #518655
+  * dh_shlibdeps: Remove --add-udeb switch (was accidentially added here).
 
  -- Joey Hess <joeyh@debian.org>  Sat, 07 Mar 2009 14:52:20 -0500
 
