--- a/debian/changelog
+++ b/debian/changelog
@@ -10,7 +10,7 @@ debhelper (7.2.3) unstable; urgency=low
   * dh: Override LC_ALL, not LANG. re-Closes: #517617
   * dh_installchangelogs: Support -X to exclude automatic installation
     of specific upstream changelogs. re-Closes: #490937
-  * Compatability level 4 is now deprecated.
+  * Compat level 4 is now deprecated.
   * dh_makeshlibs: Re-add --add-udeb support. Closes: #518655
   * dh_shlibdeps: Remove --add-udeb switch (was accidentially added here).
 
