dh_makeshlibs: Fix --add-udeb, for real. Closes: #518706

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+debhelper (7.2.4) UNRELEASED; urgency=low
+
+  * dh_makeshlibs: Fix --add-udeb, for real. Closes: #518706
+
+ -- Joey Hess <joeyh@debian.org>  Sun, 08 Mar 2009 13:14:02 -0400
+
 debhelper (7.2.3) unstable; urgency=low
 
   * dh_installmenus: Now that a triggers capable menu and dpkg are in
