--- a/debian/changelog
+++ b/debian/changelog
@@ -1,8 +1,8 @@
-debhelper (7.2.4) UNRELEASED; urgency=low
+debhelper (7.2.4) unstable; urgency=low
 
   * dh_makeshlibs: Fix --add-udeb, for real. Closes: #518706
 
- -- Joey Hess <joeyh@debian.org>  Sun, 08 Mar 2009 13:14:02 -0400
+ -- Joey Hess <joeyh@debian.org>  Sun, 08 Mar 2009 13:14:30 -0400
 
 debhelper (7.2.3) unstable; urgency=low
 
