--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+debhelper (7.2.5) UNRELEASED; urgency=low
+
+  * Set MODULEBUILDRC=/dev/null when running perl Build scripts
+    to avoid ~/.modulebuildrc influencing the build. Closes: #517423
+
+ -- Joey Hess <joeyh@debian.org>  Mon, 09 Mar 2009 13:23:34 -0400
+
 debhelper (7.2.4) unstable; urgency=low
 
   * dh_makeshlibs: Fix --add-udeb, for real. Closes: #518706
