Examples files updated to add dh_bugfiles, remove obsolete dh_python.

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+debhelper (7.2.6) UNRELEASED; urgency=low
+
+  * Examples files updated to add dh_bugfiles, remove obsolete
+    dh_python.
+
+ -- Joey Hess <joeyh@debian.org>  Thu, 12 Mar 2009 19:00:35 -0400
+
 debhelper (7.2.5) unstable; urgency=low
 
   * Set MODULEBUILDRC=/dev/null when running perl Build scripts
