--- a/debian/changelog
+++ b/debian/changelog
@@ -1,10 +1,10 @@
-debhelper (7.2.6) UNRELEASED; urgency=low
+debhelper (7.2.6) unstable; urgency=low
 
   * Examples files updated to add dh_bugfiles, remove obsolete
     dh_python.
   * dh_auto_test: Support DEB_BUILD_OPTIONS=nocheck. Closes: #519374
 
- -- Joey Hess <joeyh@debian.org>  Thu, 12 Mar 2009 19:00:35 -0400
+ -- Joey Hess <joeyh@debian.org>  Sun, 15 Mar 2009 17:54:48 -0400
 
 debhelper (7.2.5) unstable; urgency=low
 
