Fix calling the same helper for separate packages in the override of dh binary-indep/binary-arch. Closes: #520567
This is based on some work by Modestas Vainius, somewhat simplified
by a trick using excludes.

Note that the error in the case where there are no packages to build was
changed to a warning. That can easily happen now, and doesn't seem
particilarly error-worthy anyway; just exiting w/o doing anything seems
fine in that case.

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+debhelper (7.2.7) UNRELEASED; urgency=low
+
+  * Fix calling the same helper for separate packages in the override of dh
+    binary-indep/binary-arch. Closes: #520567
+
+ -- Joey Hess <joeyh@debian.org>  Fri, 20 Mar 2009 21:26:03 -0400
+
 debhelper (7.2.6) unstable; urgency=low
 
   * Examples files updated to add dh_bugfiles, remove obsolete
