--- a/debian/changelog
+++ b/debian/changelog
@@ -2,6 +2,8 @@ debhelper (7.2.7) UNRELEASED; urgency=low
 
   * Fix calling the same helper for separate packages in the override of dh
     binary-indep/binary-arch. Closes: #520567
+  * Add --remaining-packages option (Modestas Vainius)
+    Closes: #520615
 
  -- Joey Hess <joeyh@debian.org>  Fri, 20 Mar 2009 21:26:03 -0400
 
