Pass -L UTF-8 to po4a to work around bug #520942

--- a/debian/changelog
+++ b/debian/changelog
@@ -4,6 +4,7 @@ debhelper (7.2.7) UNRELEASED; urgency=low
     binary-indep/binary-arch. Closes: #520567
   * Add --remaining-packages option (Modestas Vainius)
     Closes: #520615
+  * Pass -L UTF-8 to po4a to work around bug #520942
 
  -- Joey Hess <joeyh@debian.org>  Fri, 20 Mar 2009 21:26:03 -0400
 
