--- a/debian/changelog
+++ b/debian/changelog
@@ -1,4 +1,11 @@
-debhelper (7.2.7) UNRELEASED; urgency=low
+debhelper (7.2.8) UNRELEASED; urgency=low
+
+  * dh_icons: ignore gnome and hicolor themes (will be handled
+    by triggers). Closes: #521181
+
+ -- Joey Hess <joeyh@debian.org>  Thu, 26 Mar 2009 15:20:07 -0400
+
+debhelper (7.2.7) unstable; urgency=low
 
   * Fix calling the same helper for separate packages in the override of dh
     binary-indep/binary-arch. Closes: #520567
@@ -6,7 +13,7 @@ debhelper (7.2.7) UNRELEASED; urgency=low
     Closes: #520615
   * Pass -L UTF-8 to po4a to work around bug #520942
 
- -- Joey Hess <joeyh@debian.org>  Fri, 20 Mar 2009 21:26:03 -0400
+ -- Joey Hess <joeyh@debian.org>  Mon, 23 Mar 2009 15:37:21 -0400
 
 debhelper (7.2.6) unstable; urgency=low
 
