--- a/debian/changelog
+++ b/debian/changelog
@@ -1,4 +1,4 @@
-debhelper (7.2.7) UNRELEASED; urgency=low
+debhelper (7.2.7) unstable; urgency=low
 
   * Fix calling the same helper for separate packages in the override of dh
     binary-indep/binary-arch. Closes: #520567
@@ -8,7 +8,7 @@ debhelper (7.2.7) UNRELEASED; urgency=low
   * dh_icons: ignore gnome and hicolor themes (will be handled
     by triggers). Closes: #521181
 
- -- Joey Hess <joeyh@debian.org>  Mon, 23 Mar 2009 15:37:21 -0400
+ -- Joey Hess <joeyh@debian.org>  Fri, 27 Mar 2009 14:15:29 -0400
 
 debhelper (7.2.6) unstable; urgency=low
 
