dh_desktop: Avoid using find -execdir as it will fail with certian badly configured PATHs (and is not a benefit in this context anyway). Closes: #521960

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,11 @@
+debhelper (7.2.8) UNRELEASED; urgency=low
+
+  * dh_desktop: Avoid using find -execdir as it will fail
+    with certian badly configured PATHs (and is not a benefit
+    in this context anyway). Closes: #521960
+
+ -- Joey Hess <joeyh@debian.org>  Tue, 31 Mar 2009 14:07:13 -0400
+
 debhelper (7.2.7) unstable; urgency=low
 
   * Fix calling the same helper for separate packages in the override of dh
