--- a/debian/changelog
+++ b/debian/changelog
@@ -1,8 +1,8 @@
 debhelper (7.2.8) UNRELEASED; urgency=low
 
-  * dh_desktop: Avoid using find -execdir as it will fail
-    with certian badly configured PATHs (and is not a benefit
-    in this context anyway). Closes: #521960
+  * dh_desktop: Now a deprecated no-op, since desktop-file-utils
+    uses triggers. Closes: #523474
+    (also Closes: #521960, #407701 as no longer applicable)
 
  -- Joey Hess <joeyh@debian.org>  Tue, 31 Mar 2009 14:07:13 -0400
 
