--- a/debian/changelog
+++ b/debian/changelog
@@ -3,6 +3,7 @@ debhelper (7.2.8) UNRELEASED; urgency=low
   * dh_desktop: Now a deprecated no-op, since desktop-file-utils
     uses triggers. Closes: #523474
     (also Closes: #521960, #407701 as no longer applicable)
+  * Move dh sequence documentation to PROGRAMMING.
 
  -- Joey Hess <joeyh@debian.org>  Tue, 31 Mar 2009 14:07:13 -0400
 
