--- a/debian/changelog
+++ b/debian/changelog
@@ -1,11 +1,11 @@
-debhelper (7.2.8) UNRELEASED; urgency=low
+debhelper (7.2.8) unstable; urgency=low
 
   * dh_desktop: Now a deprecated no-op, since desktop-file-utils
     uses triggers. Closes: #523474
     (also Closes: #521960, #407701 as no longer applicable)
   * Move dh sequence documentation to PROGRAMMING.
 
- -- Joey Hess <joeyh@debian.org>  Tue, 31 Mar 2009 14:07:13 -0400
+ -- Joey Hess <joeyh@debian.org>  Mon, 20 Apr 2009 16:15:32 -0400
 
 debhelper (7.2.7) unstable; urgency=low
 
