dh_fixperms: Ensure lintian overrides are mode 644. (Patch from #459548)

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+debhelper (7.2.9) UNRELEASED; urgency=low
+
+  * dh_fixperms: Ensure lintian overrides are mode 644.
+    (Patch from #459548)
+
+ -- Joey Hess <joeyh@debian.org>  Tue, 21 Apr 2009 17:01:41 -0400
+
 debhelper (7.2.8) unstable; urgency=low
 
   * dh_desktop: Now a deprecated no-op, since desktop-file-utils
