dh_fixperms: Fix permissions of OCaml .cmxs files. Closes: #526221

--- a/debian/changelog
+++ b/debian/changelog
@@ -2,6 +2,7 @@ debhelper (7.2.9) UNRELEASED; urgency=low
 
   * dh_fixperms: Ensure lintian overrides are mode 644.
     (Patch from #459548)
+  * dh_fixperms: Fix permissions of OCaml .cmxs files. Closes: #526221
 
  -- Joey Hess <joeyh@debian.org>  Tue, 21 Apr 2009 17:01:41 -0400
 
