--- a/debian/changelog
+++ b/debian/changelog
@@ -3,6 +3,8 @@ debhelper (7.2.9) UNRELEASED; urgency=low
   * dh_fixperms: Ensure lintian overrides are mode 644.
     (Patch from #459548)
   * dh_fixperms: Fix permissions of OCaml .cmxs files. Closes: #526221
+  * dh: Add --without to allow disabling sequence addons (particularly
+    useful to disable the default python-support addon).
 
  -- Joey Hess <joeyh@debian.org>  Tue, 21 Apr 2009 17:01:41 -0400
 
