Close COMPAT_IN filehandle. Closes: #527464

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+debhelper (7.2.10) UNRELEASED; urgency=low
+
+  * Close COMPAT_IN filehandle. Closes: #527464
+
+ -- Joey Hess <joeyh@debian.org>  Thu, 07 May 2009 16:33:25 -0400
+
 debhelper (7.2.9) unstable; urgency=low
 
   * dh_fixperms: Ensure lintian overrides are mode 644.
