--- a/debian/changelog
+++ b/debian/changelog
@@ -1,6 +1,8 @@
 debhelper (7.2.10) UNRELEASED; urgency=low
 
   * Close COMPAT_IN filehandle. Closes: #527464
+  * dh_auto_configure: Clarify man page re adding configure
+    parameters. Closes: #527256
 
  -- Joey Hess <joeyh@debian.org>  Thu, 07 May 2009 16:33:25 -0400
 
