--- a/debian/changelog
+++ b/debian/changelog
@@ -1,4 +1,4 @@
-debhelper (7.2.10) UNRELEASED; urgency=low
+debhelper (7.2.10) unstable; urgency=low
 
   * Close COMPAT_IN filehandle. Closes: #527464
   * dh_auto_configure: Clarify man page re adding configure
@@ -7,7 +7,7 @@ debhelper (7.2.10) UNRELEASED; urgency=low
     in case it is a Build.PL passthru, to avoid it creating
     the .packlist file. Closes: #527990
 
- -- Joey Hess <joeyh@debian.org>  Thu, 07 May 2009 16:33:25 -0400
+ -- Joey Hess <joeyh@debian.org>  Sun, 10 May 2009 13:07:08 -0400
 
 debhelper (7.2.9) unstable; urgency=low
 
