dh_auto_configure: Add --skipdeps when running Makefile.PL, to prevent Module::Install from trying to download dependencies. Closes: #528235

--- a/debian/changelog
+++ b/debian/changelog
@@ -2,6 +2,9 @@ debhelper (7.2.11) UNRELEASED; urgency=low
 
   * dh: Support --with addon,addon,...
     Closes: #528178
+  * dh_auto_configure: Add --skipdeps when running Makefile.PL,
+    to prevent Module::Install from trying to download dependencies.
+    Closes: #528235
 
  -- Joey Hess <joeyh@debian.org>  Mon, 11 May 2009 14:50:33 -0400
 
