--- a/debhelper.pod
+++ b/debhelper.pod
@@ -62,8 +62,8 @@ debian/control, debhelper will use debian/foo if no debian/package.foo
 file can be found.
 
 In some rare cases, you may want to have different versions of these files
-for different architectures or OSes. If files named debian/package.foo.arch
-or debian/package.foo.os exist, where "arch" and "os" are the same as the
+for different architectures or OSes. If files named debian/package.foo.ARCH
+or debian/package.foo.OS exist, where "ARCH" and "OS" are the same as the
 output of  "dpkg-architecture -qDEB_HOST_ARCH" /
 "dpkg-architecture -qDEB_HOST_ARCH_OS",
 then they will be used in preference to other, more general files.
