--- a/debian/changelog
+++ b/debian/changelog
@@ -1,4 +1,4 @@
-debhelper (7.2.11) UNRELEASED; urgency=low
+debhelper (7.2.11) unstable; urgency=low
 
   * dh: Support --with addon,addon,...
     Closes: #528178
@@ -9,7 +9,7 @@ debhelper (7.2.11) UNRELEASED; urgency=low
     file support. Closes: #494914
     (Thanks, Aurelien Jarno)
 
- -- Joey Hess <joeyh@debian.org>  Mon, 11 May 2009 14:50:33 -0400
+ -- Joey Hess <joeyh@debian.org>  Tue, 12 May 2009 14:52:18 -0400
 
 debhelper (7.2.10) unstable; urgency=low
 
