--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+debhelper (7.2.12) UNRELEASED; urgency=low
+
+  * dh_auto_configure: Revert --skipdeps change
+    Closes: #528647, reopens: #528235
+
+ -- Joey Hess <joeyh@debian.org>  Thu, 14 May 2009 13:44:18 -0400
+
 debhelper (7.2.11) unstable; urgency=low
 
   * dh: Support --with addon,addon,...
