--- a/debian/changelog
+++ b/debian/changelog
@@ -1,9 +1,9 @@
-debhelper (7.2.12) UNRELEASED; urgency=low
+debhelper (7.2.12) unstable; urgency=low
 
   * dh_auto_configure: Revert --skipdeps change
     Closes: #528647, reopens: #528235
 
- -- Joey Hess <joeyh@debian.org>  Thu, 14 May 2009 13:44:18 -0400
+ -- Joey Hess <joeyh@debian.org>  Thu, 14 May 2009 14:15:26 -0400
 
 debhelper (7.2.11) unstable; urgency=low
 
