dh_auto_configure: Pass --skipdeps safely via PERL_AUTOINSTALL. Closes: #528235

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+debhelper (7.2.13) unstable; urgency=low
+
+  * dh_auto_configure: Pass --skipdeps safely via PERL_AUTOINSTALL.
+    Closes: #528235
+
+ -- Joey Hess <joeyh@debian.org>  Thu, 14 May 2009 15:21:21 -0400
+
 debhelper (7.2.12) unstable; urgency=low
 
   * dh_auto_configure: Revert --skipdeps change
