--- a/debian/changelog
+++ b/debian/changelog
@@ -1,8 +1,8 @@
-debhelper (7.2.14) UNRELEASED; urgency=low
+debhelper (7.2.14) unstable; urgency=low
 
   * dh: Avoid writing log after override_dh_clean is run. Closes: #529228
 
- -- Joey Hess <joeyh@debian.org>  Mon, 18 May 2009 12:48:37 -0400
+ -- Joey Hess <joeyh@debian.org>  Mon, 18 May 2009 12:49:32 -0400
 
 debhelper (7.2.13) unstable; urgency=low
 
