dh_strip: Also strip OCaml shared libraries. (Stephane Glondu) Closes: #527272

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+debhelper (7.2.15) UNRELEASED; urgency=low
+
+  * dh_strip: Also strip OCaml shared libraries. (Stephane Glondu)
+    Closes: #527272
+
+ -- Joey Hess <joeyh@debian.org>  Mon, 18 May 2009 15:42:04 -0400
+
 debhelper (7.2.14) unstable; urgency=low
 
   * dh: Avoid writing log after override_dh_clean is run. Closes: #529228
