dh_compress: Avoid compressing .svg and .sgvz files, since these might be used as images on a html page, and also to avoid needing to special case the .svgz extention when compressing svg. Closes: #530253

--- a/debian/changelog
+++ b/debian/changelog
@@ -2,6 +2,10 @@ debhelper (7.2.15) UNRELEASED; urgency=low
 
   * dh_strip: Also strip OCaml shared libraries. (Stephane Glondu)
     Closes: #527272
+  * dh_compress: Avoid compressing .svg and .sgvz files, since these
+    might be used as images on a html page, and also to avoid needing
+    to special case the .svgz extention when compressing svg.
+    Closes: #530253
 
  -- Joey Hess <joeyh@debian.org>  Mon, 18 May 2009 15:42:04 -0400
 
