dh_scrollkeeper: Now a deprecated no-op. Closes: #530806

--- a/debian/changelog
+++ b/debian/changelog
@@ -6,6 +6,7 @@ debhelper (7.2.15) UNRELEASED; urgency=low
     might be used as images on a html page, and also to avoid needing
     to special case the .svgz extention when compressing svg.
     Closes: #530253
+  * dh_scrollkeeper: Now a deprecated no-op. Closes: #530806
 
  -- Joey Hess <joeyh@debian.org>  Mon, 18 May 2009 15:42:04 -0400
 
