--- a/doc/TODO
+++ b/doc/TODO
@@ -30,4 +30,4 @@ Deprecated:
 * Convert warning about unknown command-line options back to an error.
   Need to wait a while (from Oct 2008) to ensure that most rules files
   that pass unknown options to commands are fixed.
-* dh_desktop. Remove eventually..
+* dh_desktop, dh_scrollkeeper. Remove eventually..
