--- a/debian/changelog
+++ b/debian/changelog
@@ -7,6 +7,8 @@ debhelper (7.2.15) UNRELEASED; urgency=low
     to special case the .svgz extention when compressing svg.
     Closes: #530253
   * dh_scrollkeeper: Now a deprecated no-op. Closes: #530806
+  * dh_gconf: Remove postrm fragment that handled schema migration
+    from /etc to /usr. Closes: #531035
 
  -- Joey Hess <joeyh@debian.org>  Mon, 18 May 2009 15:42:04 -0400
 
