dh_shlibdeps: run dpkg-shlibdeps on OCaml's *.cmxs files

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,7 +1,7 @@
 debhelper (7.2.15) UNRELEASED; urgency=low
 
-  * dh_strip: Also strip OCaml shared libraries. (Stephane Glondu)
-    Closes: #527272
+  * dh_strip, dh_shlibdeps: Add support for OCaml shared libraries.
+    (Stephane Glondu) Closes: #527272, #532701
   * dh_compress: Avoid compressing .svg and .sgvz files, since these
     might be used as images on a html page, and also to avoid needing
     to special case the .svgz extention when compressing svg.
