dh_gconf: Add missed half of postrm fragment removal. Closes: #531035

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+debhelper (7.2.16) unstable; urgency=low
+
+  * dh_gconf: Add missed half of postrm fragment removal. Closes: #531035
+
+ -- Joey Hess <joeyh@debian.org>  Thu, 11 Jun 2009 12:50:33 -0400
+
 debhelper (7.2.15) unstable; urgency=low
 
   * dh_strip, dh_shlibdeps: Add support for OCaml shared libraries.
