Allow command-specific options to be passed to commands via dh without causing other commands to emit a getopt warning or deprecation message.

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,11 @@
+debhelper (7.2.17) UNRELEASED; urgency=low
+
+  * Allow command-specific options to be passed to commands
+    via dh without causing other commands to emit a getopt
+    warning or deprecation message.
+
+ -- Joey Hess <joeyh@debian.org>  Fri, 12 Jun 2009 00:26:11 -0400
+
 debhelper (7.2.16) unstable; urgency=low
 
   * dh_gconf: Add missed half of postrm fragment removal. Closes: #531035
