Revert "Improvements in DH_OPTIONS handling and DH_AUTO_OPTIONS envvar support."
This mostly reverts commit f897611a77726655aea258af0c4d52a8ce759ebc.

Remaining cosmetic changes (all functional changes have been reverted):

* Refactoring of option string into split_options_string() sub (no semantic
  changes though).
* Cosmetic change in Dh_Buildsystems.pm.

Breaks testsuite.

--- a/debhelper.pod
+++ b/debhelper.pod
@@ -491,14 +491,8 @@ Anything in this variable will be prepended to the command line arguments
 of all debhelper commands. Command-specific options will be ignored by 
 commands that do not support them. 
 
-Arguments are separated by whitespaces unless a whitespace is escaped
-with a backslash character (\). Then the whitespace is treated literally.
-Likewise, the backslash character is treated literally unless it is followed
-by a single whitespace. If a backslash is followed by two or more spaces,
-it will be considered as the last symbol of the argument.
-
-DH_OPTIONS is useful in some situations, for example, if you need to pass -p
-to all debhelper commands that will be run. One good way to set DH_OPTIONS is
+This is useful in some situations, for example, if you need to pass -p to
+all debhelper commands that will be run. One good way to set DH_OPTIONS is
 by using "Target-specific Variable Values" in your debian/rules file. See
 the make documentation for details on doing this.
 
