--- a/dh_auto.pod
+++ b/dh_auto.pod
@@ -118,7 +118,7 @@ in the external package. The only limitation is that support for it can only be
 enabled manually (via "Manual build system selection"). Their auto-selection is
 not allowed in order to keep the process stable under various system
 configurations (i.e. when different sets of third party debhelper build systems
-are installed). However, the user can always discover all default and third
+are installed). However, the user can always discover all standard and third
 party debhelper build systems supported on the system by passing the L<--list>
 option to any dh_auto program.
 
@@ -186,7 +186,7 @@ directory path.
 =item B<--list>, B<-l>
 
 List all debhelper build systems available on this system and exit. The list
-includes both default (listed first in the auto-selection order) and third
+includes both standard (listed first in the auto-selection order) and third
 party build systems (clearly marked as such). The list is concluded with the
 information about which build system would be auto-selected to complete the
 building step or which one is manually specified with the I<--buildsystem>
@@ -216,7 +216,7 @@ L<debhelper(7)>
 
 =over 2
 
-=item B<Default debhelper build systems>
+=item B<Standard debhelper build systems>
 
 #BUILD SYSTEM MAN LIST#
 
