--- a/debian/changelog
+++ b/debian/changelog
@@ -1,4 +1,4 @@
-debhelper (7.2.17) UNRELEASED; urgency=low
+debhelper (7.2.17) unstable; urgency=low
 
   * Allow command-specific options to be passed to commands
     via dh without causing other commands to emit a getopt
@@ -10,9 +10,9 @@ debhelper (7.2.17) UNRELEASED; urgency=low
     the new system also requires they have START-INFO-DIR-ENTRY and
     END-INFO-DIR-ENTRY for proper registration. I assume there will be
     some mass bug filing for any packages that do not have that.
-    Closes: #528864
+    Closes: #528864, #357434
 
- -- Joey Hess <joeyh@debian.org>  Fri, 12 Jun 2009 00:26:11 -0400
+ -- Joey Hess <joeyh@debian.org>  Fri, 26 Jun 2009 09:02:51 -0400
 
 debhelper (7.2.16) unstable; urgency=low
 
