--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+debhelper (7.2.18) UNRELEASED; urgency=low
+
+  * dh_shlibdeps: Ensure DEBIAN directory exists, as dpkg-shlibdeps
+    prints a confusing warning if it does not. Closes: #534226
+
+ -- Joey Hess <joeyh@debian.org>  Sun, 28 Jun 2009 15:59:11 -0400
+
 debhelper (7.2.17) unstable; urgency=low
 
   * Allow command-specific options to be passed to commands
