close another bug

--- a/debian/changelog
+++ b/debian/changelog
@@ -13,6 +13,9 @@ debhelper (7.3.0) UNRELEASED; urgency=low
     - dh_auto_* --list can be used to list available and selected build
       systems.
     - Adds support for cmake.
+    - For the perl_build build system, Build is used consistently
+      instead of falling back to using the generated Makefile.
+      Closes: #534332
     - Historical dh_auto_* behavior should be preserved despite these
       large changes..
 
