clean up --sourcedir/--sourcedirectory conflict
* Move two move command-specific options to only be accepted by the commands
  that use them. The options are:
  --sourcedir, --destdir
* If any third-party debhelper commands use either of the above options,
  they will be broken, and need to be changed to pass options to init().

This was done because of a conflict with the --sourcedirectory options
used by dh_auto_*. I originally wanted to make dh_auto_* and dh_install
both use --sourcedir, but that didn't work out.

--- a/debian/changelog
+++ b/debian/changelog
@@ -18,6 +18,11 @@ debhelper (7.3.0) UNRELEASED; urgency=low
       Closes: #534332
     - Historical dh_auto_* behavior should be preserved despite these
       large changes..
+  * Move two move command-specific options to only be accepted by the commands
+    that use them. The options are:
+    --sourcedir, --destdir
+  * If any third-party debhelper commands use either of the above options,
+    they will be broken, and need to be changed to pass options to init().
 
  -- Joey Hess <joeyh@debian.org>  Mon, 20 Apr 2009 16:26:08 -0400
 
