--- a/debian/changelog
+++ b/debian/changelog
@@ -18,7 +18,7 @@ debhelper (7.3.0) UNRELEASED; urgency=low
       Closes: #534332
     - Historical dh_auto_* behavior should be preserved despite these
       large changes..
-  * Move two move command-specific options to only be accepted by the commands
+  * Move two more command-specific options to only be accepted by the commands
     that use them. The options are:
     --sourcedir, --destdir
   * If any third-party debhelper commands use either of the above options,
