--- a/debian/changelog
+++ b/debian/changelog
@@ -3,8 +3,8 @@ debhelper (7.3.0) UNRELEASED; urgency=low
   * Modular object oriented dh_auto_* buildsystem support,
     contributed by Modestas Vainius
     - dh_auto_* --sourcedirectory can now be used to specify a source
-      directory if sources and/or the whole buildsystem lives in other
-      but the top level directory. Closes: #530597
+      directory if sources and/or the whole buildsystem lives elsewhere
+      than the top level directory. Closes: #530597
     - dh_auto_* --builddirectory can now be used to specify a build
       directory to use for out of source building, for build systems
       that support it. Closes: #480577
