--- a/debian/changelog
+++ b/debian/changelog
@@ -1,11 +1,11 @@
-debhelper (7.2.18) UNRELEASED; urgency=low
+debhelper (7.2.18) unstable; urgency=low
 
   * dh_shlibdeps: Ensure DEBIAN directory exists, as dpkg-shlibdeps
     prints a confusing warning if it does not. Closes: #534226
   * dh_auto_install: Pass --install-layout=deb to setup.py
     to support python 2.6. Closes: #534620
 
- -- Joey Hess <joeyh@debian.org>  Sun, 28 Jun 2009 15:59:11 -0400
+ -- Joey Hess <joeyh@debian.org>  Mon, 29 Jun 2009 15:35:40 -0400
 
 debhelper (7.2.17) unstable; urgency=low
 
