--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,11 @@
+debhelper (7.2.19) UNRELEASED; urgency=low
+
+  * dh_install: Handle correctly the case where a glob expands to
+    a dangling symlink, installing the dangling link as requested.
+    Closes: #534565
+
+ -- Joey Hess <joeyh@debian.org>  Tue, 30 Jun 2009 12:46:22 -0400
+
 debhelper (7.2.18) unstable; urgency=low
 
   * dh_shlibdeps: Ensure DEBIAN directory exists, as dpkg-shlibdeps
