--- a/debian/changelog
+++ b/debian/changelog
@@ -1,13 +1,13 @@
-debhelper (7.2.19) UNRELEASED; urgency=low
+debhelper (7.2.19) unstable; urgency=low
 
   * dh_install: Handle correctly the case where a glob expands to
     a dangling symlink, installing the dangling link as requested.
     Closes: #534565
-  * dh_install: Fix use of debian/tmp in v7 mode; a bug caused it to
-    put files inside a debian/tmp directory in the package build directory,
-    now that prefix is stripped. (See #534565)
+  * dh_install: Fix fallback use of debian/tmp in v7 mode; a bug caused
+    it to put files inside a debian/tmp directory in the package build
+    directory, now that prefix is stripped. (See #534565)
 
- -- Joey Hess <joeyh@debian.org>  Tue, 30 Jun 2009 12:46:22 -0400
+ -- Joey Hess <joeyh@debian.org>  Tue, 30 Jun 2009 12:56:52 -0400
 
 debhelper (7.2.18) unstable; urgency=low
 
