--- a/debian/changelog
+++ b/debian/changelog
@@ -1,4 +1,4 @@
-debhelper (7.3.0) UNRELEASED; urgency=low
+debhelper (7.3.0) experimental; urgency=low
 
   * Modular object oriented dh_auto_* buildsystem support,
     contributed by Modestas Vainius
@@ -27,7 +27,7 @@ debhelper (7.3.0) UNRELEASED; urgency=low
     and further suppress warnings about such options it passes on to debhelper
     commands. This was attempted incompletely before in version 7.2.17.
 
- -- Joey Hess <joeyh@debian.org>  Mon, 20 Apr 2009 16:26:08 -0400
+ -- Joey Hess <joeyh@debian.org>  Wed, 01 Jul 2009 15:31:20 -0400
 
 debhelper (7.2.19) unstable; urgency=low
 
