Add a versioned dep on perl-base, to get a version that supports GetOptionsFromArray. Closes: #536310

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+debhelper (7.2.21) unstable; urgency=low
+
+  * Add a versioned dep on perl-base, to get a version that supports
+    GetOptionsFromArray. Closes: #536310
+
+ -- Joey Hess <joeyh@debian.org>  Wed, 08 Jul 2009 21:08:45 -0400
+
 debhelper (7.2.20) unstable; urgency=low
 
   * dh_install: Fix installation of entire top-level directory
