--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+debhelper (7.3.2) experimental; urgency=low
+
+  * Merged debhelper 7.2.21.
+
+ -- Joey Hess <joeyh@debian.org>  Wed, 08 Jul 2009 21:23:48 -0400
+
 debhelper (7.3.1) experimental; urgency=low
 
   * Merged debhelper 7.2.20.
