Add ant buildsystem support. Closes: #537021

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+debhelper (7.3.3) UNRELEASED; urgency=low
+
+  * Add ant buildsystem support. Closes: #537021
+
+ -- Joey Hess <joeyh@debian.org>  Tue, 14 Jul 2009 16:35:50 -0400
+
 debhelper (7.3.2) experimental; urgency=low
 
   * Merged debhelper 7.2.21.
