--- a/debian/changelog
+++ b/debian/changelog
@@ -1,10 +1,10 @@
-debhelper (7.2.22) UNRELEASED; urgency=low
+debhelper (7.2.22) unstable; urgency=low
 
   * dh_install: Fix support for the case where --sourcedir=debian/tmp/foo
     is used. Perl was not being greedy enough and the 'foo' was not stripped
     from the destination directory in this unusual case. Closes: #537017
 
- -- Joey Hess <joeyh@debian.org>  Tue, 14 Jul 2009 17:05:26 -0400
+ -- Joey Hess <joeyh@debian.org>  Tue, 14 Jul 2009 17:08:25 -0400
 
 debhelper (7.2.21) unstable; urgency=low
 
