test suite should not need modification to add a new build system

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,8 +1,9 @@
-debhelper (7.3.3) UNRELEASED; urgency=low
+debhelper (7.3.3) experimental; urgency=low
 
   * Add ant buildsystem support. Closes: #537021
+  * Merged debhelper 7.2.22.
 
- -- Joey Hess <joeyh@debian.org>  Tue, 14 Jul 2009 16:35:50 -0400
+ -- Joey Hess <joeyh@debian.org>  Tue, 14 Jul 2009 17:16:28 -0400
 
 debhelper (7.3.2) experimental; urgency=low
 
