--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+debhelper (7.2.24) unstable; urgency=low
+
+  * dh_install: Add test suite covering the last 5 bugs.
+
+ -- Joey Hess <joeyh@debian.org>  Wed, 15 Jul 2009 09:42:18 -0400
+
 debhelper (7.2.23) unstable; urgency=low
 
   * dh_install: Fix support for the case where debian/tmp is
