Build for all supported Pythons if installed.
python_distutils buildsystem: Build for all supported Python
versions in case they're installed. Ensure that correct
shebangs are created by using `python' first during build
and install. Closes: #520834

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,12 @@
+debhelper (7.3.5) experimental; urgency=low
+
+  * python_distutils buildsystem: Build for all supported Python
+    versions in case they're installed. Ensure that correct
+    shebangs are created by using `python' first during build
+    and install. Closes: #520834
+
+ -- Bernd Zeimetz <bzed@debian.org>  Sun, 19 Jul 2009 03:45:23 +0200
+
 debhelper (7.3.4) experimental; urgency=low
 
   * Merged debhelper 7.2.24.
