--- a/debian/changelog
+++ b/debian/changelog
@@ -8,7 +8,7 @@ debhelper (7.3.5) experimental; urgency=low
     Also build with python*-dbg if the package build-depends
     on them.
 
- -- Bernd Zeimetz <bzed@debian.org>  Sun, 19 Jul 2009 15:26:13 +0200
+ -- Joey Hess <joeyh@debian.org>  Mon, 20 Jul 2009 20:30:22 +0200
 
 debhelper (7.3.4) experimental; urgency=low
 
