--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+debhelper (7.3.6) UNRELEASED; urgency=low
+
+  * perl_makemaker: Re-add fix for #496157, lost in rewrite.
+
+ -- Joey Hess <joeyh@debian.org>  Wed, 22 Jul 2009 16:42:14 +0200
+
 debhelper (7.3.5) experimental; urgency=low
 
   [ Bernd Zeimetz ]
