--- a/debian/changelog
+++ b/debian/changelog
@@ -1,8 +1,8 @@
-debhelper (7.3.6) UNRELEASED; urgency=low
+debhelper (7.3.6) experimental; urgency=low
 
   * perl_makemaker: Re-add fix for #496157, lost in rewrite.
 
- -- Joey Hess <joeyh@debian.org>  Wed, 22 Jul 2009 16:42:14 +0200
+ -- Joey Hess <joeyh@debian.org>  Thu, 23 Jul 2009 10:31:02 +0200
 
 debhelper (7.3.5) experimental; urgency=low
 
