--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,12 @@
+debhelper (7.3.7) unstable; urgency=low
+
+  * First upload of buildsystems support to unstable.
+    Summary: Adds --buildsystem (modular, OO buildsystem classes),
+    --sourcedirectory, --builddirectory, and support for cmake
+    and ant.
+
+ -- Joey Hess <joeyh@debian.org>  Fri, 24 Jul 2009 12:07:47 +0200
+
 debhelper (7.3.6) experimental; urgency=low
 
   * perl_makemaker: Re-add fix for #496157, lost in rewrite.
