Fix t/override_target to use ./run. Closes: #538315

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+debhelper (7.3.8) unstable; urgency=low
+
+  * Fix t/override_target to use ./run. Closes: #538315
+
+ -- Joey Hess <joeyh@debian.org>  Sat, 25 Jul 2009 00:37:45 +0200
+
 debhelper (7.3.7) unstable; urgency=low
 
   * First upload of buildsystems support to unstable.
