--- a/debian/changelog
+++ b/debian/changelog
@@ -1,9 +1,9 @@
-debhelper (7.3.9) UNRELEASED; urgency=low
+debhelper (7.3.9) unstable; urgency=low
 
   * cmake: Avoid forcing rpath off as this can break some test suites.
     It gets stripped by cmake at install time. Closes: #538977
 
- -- Joey Hess <joeyh@debian.org>  Sat, 01 Aug 2009 15:49:54 -0400
+ -- Joey Hess <joeyh@debian.org>  Sat, 01 Aug 2009 15:59:07 -0400
 
 debhelper (7.3.8) unstable; urgency=low
 
