perl_build: Avoid failing if forced to be used in dh_auto_clean when Build does not exist (ie due to being run twice in a row). Closes: #539848

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,11 @@
+debhelper (7.3.10) UNRELEASED; urgency=low
+
+  * perl_build: Avoid failing if forced to be used in dh_auto_clean
+    when Build does not exist (ie due to being run twice in a row).
+    Closes: #539848
+
+ -- Joey Hess <joeyh@debian.org>  Tue, 04 Aug 2009 13:19:31 -0400
+
 debhelper (7.3.9) unstable; urgency=low
 
   * cmake: Avoid forcing rpath off as this can break some test suites.
