dh_builddeb: Fix man page typo. Closes: #539976

--- a/debian/changelog
+++ b/debian/changelog
@@ -3,6 +3,7 @@ debhelper (7.3.10) UNRELEASED; urgency=low
   * perl_build: Avoid failing if forced to be used in dh_auto_clean
     when Build does not exist (ie due to being run twice in a row).
     Closes: #539848
+  * dh_builddeb: Fix man page typo. Closes: #539976
 
  -- Joey Hess <joeyh@debian.org>  Tue, 04 Aug 2009 13:19:31 -0400
 
