dh_installdeb: In udeb mode, support the menutest and isinstallable maintainer scripts. Closes: #540079 Thanks, Colin Watson.

--- a/debian/changelog
+++ b/debian/changelog
@@ -4,6 +4,8 @@ debhelper (7.3.10) UNRELEASED; urgency=low
     when Build does not exist (ie due to being run twice in a row).
     Closes: #539848
   * dh_builddeb: Fix man page typo. Closes: #539976
+  * dh_installdeb: In udeb mode, support the menutest and isinstallable
+    maintainer scripts. Closes: #540079 Thanks, Colin Watson.
 
  -- Joey Hess <joeyh@debian.org>  Tue, 04 Aug 2009 13:19:31 -0400
 
