--- a/debian/changelog
+++ b/debian/changelog
@@ -1,4 +1,4 @@
-debhelper (7.3.10) UNRELEASED; urgency=low
+debhelper (7.3.10) unstable; urgency=low
 
   * perl_build: Avoid failing if forced to be used in dh_auto_clean
     when Build does not exist (ie due to being run twice in a row).
@@ -7,7 +7,7 @@ debhelper (7.3.10) UNRELEASED; urgency=low
   * dh_installdeb: In udeb mode, support the menutest and isinstallable
     maintainer scripts. Closes: #540079 Thanks, Colin Watson.
 
- -- Joey Hess <joeyh@debian.org>  Tue, 04 Aug 2009 13:19:31 -0400
+ -- Joey Hess <joeyh@debian.org>  Wed, 05 Aug 2009 11:03:01 -0400
 
 debhelper (7.3.9) unstable; urgency=low
 
