perl_build: Fix Build check to honor source directory setting.

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+debhelper (7.3.11) UNRELEASED; urgency=low
+
+  * perl_build: Fix Build check to honor source directory setting.
+
+ -- Joey Hess <joeyh@debian.org>  Wed, 05 Aug 2009 13:52:08 -0400
+
 debhelper (7.3.10) unstable; urgency=low
 
   * perl_build: Avoid failing if forced to be used in dh_auto_clean
