--- a/debian/changelog
+++ b/debian/changelog
@@ -1,8 +1,8 @@
-debhelper (7.3.11) UNRELEASED; urgency=low
+debhelper (7.3.11) unstable; urgency=low
 
   * perl_build: Fix Build check to honor source directory setting.
 
- -- Joey Hess <joeyh@debian.org>  Wed, 05 Aug 2009 13:52:08 -0400
+ -- Joey Hess <joeyh@debian.org>  Wed, 05 Aug 2009 13:52:34 -0400
 
 debhelper (7.3.10) unstable; urgency=low
 
