--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,11 @@
+debhelper (7.3.12) UNRELEASED; urgency=low
+
+  * dh: Allow creation of new sequences (such as to handle a patch
+    target for quilt), by adding an add_command function to the
+    sequence addon interface. See #540124.
+
+ -- Joey Hess <joeyh@debian.org>  Thu, 06 Aug 2009 11:07:45 -0400
+
 debhelper (7.3.11) unstable; urgency=low
 
   * perl_build: Fix Build check to honor source directory setting.
