--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,12 @@
+debhelper (7.3.13) unstable; urgency=low
+
+  * python_distutils.pm: Support debhelper backports.
+    To allow backports of debhelper we don't pass
+    --install-layout=deb to 'setup.py install` for those Python
+    versions where the option is ignored by distutils/setuptools. 
+
+ -- Bernd Zeimetz <bzed@debian.org>  Sat, 08 Aug 2009 03:34:49 +0200
+
 debhelper (7.3.12) unstable; urgency=low
 
   * dh: Allow creation of new sequences (such as to handle a patch
