--- a/debian/changelog
+++ b/debian/changelog
@@ -3,9 +3,11 @@ debhelper (7.3.13) unstable; urgency=low
   * python_distutils.pm: Support debhelper backports.
     To allow backports of debhelper we don't pass
     --install-layout=deb to 'setup.py install` for those Python
-    versions where the option is ignored by distutils/setuptools. 
+    versions where the option is ignored by distutils/setuptools.
+    Thanks to Julian Andres Klode for the bug report.
+    Closes: #539324
 
- -- Bernd Zeimetz <bzed@debian.org>  Sat, 08 Aug 2009 03:34:49 +0200
+ -- Bernd Zeimetz <bzed@debian.org>  Sat, 08 Aug 2009 04:22:53 +0200
 
 debhelper (7.3.12) unstable; urgency=low
 
