dh: Add --list option to list available addons.

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+debhelper (7.3.14) UNRELEASED; urgency=low
+
+  * dh: Add --list option to list available addons.
+
+ -- Colin Watson <cjwatson@debian.org>  Thu, 13 Aug 2009 09:00:24 +0100
+
 debhelper (7.3.13) unstable; urgency=low
 
   [ Bernd Zeimetz ]
