--- a/debian/changelog
+++ b/debian/changelog
@@ -1,5 +1,6 @@
 debhelper (7.3.13) unstable; urgency=low
 
+  [ Bernd Zeimetz ]
   * python_distutils.pm: Support debhelper backports.
     To allow backports of debhelper we don't pass
     --install-layout=deb to 'setup.py install` for those Python
@@ -7,7 +8,7 @@ debhelper (7.3.13) unstable; urgency=low
     Thanks to Julian Andres Klode for the bug report.
     Closes: #539324
 
- -- Bernd Zeimetz <bzed@debian.org>  Sat, 08 Aug 2009 04:22:53 +0200
+ -- Joey Hess <joeyh@debian.org>  Fri, 14 Aug 2009 20:10:57 -0400
 
 debhelper (7.3.12) unstable; urgency=low
 
