--- a/debian/changelog
+++ b/debian/changelog
@@ -1,6 +1,10 @@
 debhelper (7.3.14) UNRELEASED; urgency=low
 
+  [ Colin Watson ]
   * dh: Add --list option to list available addons.
+
+  [ Joey Hess ]
+  * Run pod2man with --utf8. Closes: #541270
 
  -- Colin Watson <cjwatson@debian.org>  Thu, 13 Aug 2009 09:00:24 +0100
 
