--- a/debian/changelog
+++ b/debian/changelog
@@ -5,6 +5,7 @@ debhelper (7.3.14) UNRELEASED; urgency=low
 
   [ Joey Hess ]
   * Run pod2man with --utf8. Closes: #541270
+  * dh: Display $@ error if addon load fails. Closes: #541845
 
  -- Colin Watson <cjwatson@debian.org>  Thu, 13 Aug 2009 09:00:24 +0100
 
