dh_perl: Remove perl minimum dependency per new policy. Closes: #541811

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,13 +1,14 @@
-debhelper (7.3.14) UNRELEASED; urgency=low
+debhelper (7.3.14) unstable; urgency=low
 
   [ Colin Watson ]
-  * dh: Add --list option to list available addons.
+  * dh: Add --list option to list available addons. Closes: #541302
 
   [ Joey Hess ]
   * Run pod2man with --utf8. Closes: #541270
   * dh: Display $@ error if addon load fails. Closes: #541845
+  * dh_perl: Remove perl minimum dependency per new policy. Closes: #541811
 
- -- Colin Watson <cjwatson@debian.org>  Thu, 13 Aug 2009 09:00:24 +0100
+ -- Joey Hess <joeyh@debian.org>  Mon, 17 Aug 2009 15:55:48 -0400
 
 debhelper (7.3.13) unstable; urgency=low
 
