--- a/debian/changelog
+++ b/debian/changelog
@@ -1,4 +1,4 @@
-debhelper (7.3.15) UNRELEASED; urgency=low
+debhelper (7.3.15) unstable; urgency=low
 
   * dh_installudev: Install rules files into new location
     /lib/udev/rules.d/
@@ -14,7 +14,7 @@ debhelper (7.3.15) UNRELEASED; urgency=low
   * dh_installudev: Drop code handling move of /etc/udev/foo into
     /etc/udev/rules.d/.
 
- -- Joey Hess <joeyh@debian.org>  Fri, 21 Aug 2009 16:53:53 -0400
+ -- Joey Hess <joeyh@debian.org>  Fri, 21 Aug 2009 17:22:08 -0400
 
 debhelper (7.3.14) unstable; urgency=low
 
