dh_desktop: Clarify in man page why it's a no-op. Closes: #543364

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+debhelper (7.3.16) UNRELEASED; urgency=low
+
+  * dh_desktop: Clarify in man page why it's a no-op.
+    Closes: #543364
+
+ -- Joey Hess <joeyh@debian.org>  Mon, 24 Aug 2009 12:59:02 -0400
+
 debhelper (7.3.15) unstable; urgency=low
 
   * dh_installudev: Install rules files into new location
