dh_installdocs: Loosen the Document field parsing, to accept everything doc-base *really* accepts in a doc id (not just what it's documented to accept). Closes: #543499

--- a/debian/changelog
+++ b/debian/changelog
@@ -2,6 +2,9 @@ debhelper (7.3.16) UNRELEASED; urgency=low
 
   * dh_desktop: Clarify in man page why it's a no-op.
     Closes: #543364
+  * dh_installdocs: Loosen the Document field parsing, to accept
+    everything doc-base *really* accepts in a doc id (not just what
+    it's documented to accept). Closes: #543499
 
  -- Joey Hess <joeyh@debian.org>  Mon, 24 Aug 2009 12:59:02 -0400
 
